--- a/NewZealandGuide.html
+++ b/NewZealandGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>NewZealandGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -188,62 +188,112 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about New Zealand</h1>
+	<p>New Zealand is a small island country located in the southwestern Pacific Ocean. 
+		It consists of two main islands, the North Island and the South Island, as well as 
+		numerous smaller islands. The country has a population of around 5 million people, 
+		and its capital city is Wellington. The official languages are English, Maori, and 
+		New Zealand Sign Language. New Zealand is known for its stunning natural landscapes, 
+		which include mountains, beaches, and geothermal activity. The country is also renowned 
+		for its unique wilflife, such as kiwis, tuataras, and the critically endangered kakapo parrot. 
+		The economy is primarily based on tourism, agriculture, and exports of dairyproducts and meat. 
+		The country has a strong reputation for environmental protection and social welfare policies.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Auckland</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $41 / day per person</li>
+		<li>Mid-Range: $117 /  day per person</li>
+		<li>High-Range: $355 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Rotorua</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $32 / day per person</li>
+		<li>Mid-Range: $77 /  day per person</li>
+		<li>High-Range: $166 / day per person</li>
+	</ul>
+	<p>Christchurch</p>
+	<ul>
+		<li>Budget: $30 / day per person</li>
+		<li>Mid-Range: $80 /  day per person</li>
+		<li>High-Range: $213 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in New Zealand</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Auckland</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/New Zealand/SkyTower.jpg" alt = "Sky Tower">
+		<h4>Sky Tower</h4>
+        <p>This telecommunications and observation tower is 1,076 feet tall and contains 
+			restaurants and a cafe.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/New Zealand/AucklandZoo.jpg" alt = "Auckland Zoo">
+        <h4>Auckland Zoo</h4>
+		<p>This zoo plays a part in conservation, research, and education of the species 
+			of flor and faunce that live here.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/New Zealand/AucklandArtGallery.jpg" alt = "Auckland Art Gallery Toi o Tamaki">
+        <h4>Auckland Art Gallergy Toi o Tamaki</h4>
+		<p>This gallergy has the most extensive collection of national and international 
+			art in New Zealand.
+		</p>
+	</div>
+	<div class = "1column">
+		<img src = "Images/New Zealand/AucklandWarMemorial.jpg" alt = "Auckland War Memorial Museum">
+        <h4>Auckland War Memorial Museum</h4>
+		<p>This museum is dedicated to New Zealand's natural and military history.</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Rotorua/h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/New Zealand/WhakarewarewaForest.jpg" alt = "Whakarewarewa Forest">
+        <h4>Whakarewarewa Forest</h4>
+		<p>In this forest you can hike, cycle, or ride on horeback through a diverse range 
+			of exotic trees.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/New Zealand/PolynesianSpa.jpg" alt = "Polynesian Spa">
+        <h4>Polynesian Spa</h4>
+		<p>This spa contains geothermal bathing and access to acidic and alkaline natural mineral springs.</p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in Christchurch</h3>
+<br>
+<div class = "row">
+	<div class = "1column">
+		<img src = "Images/New Zealand/ChristchurchGardens.jpg" alt = "Christchurch Botanic Gardens">
+        <h4>Christchurch Botanic Gardens</h4>
+		<p>This garden, founded in 1863, is 21 hectacres and has a variety of exotic and local 
+			plants, a nursery, several conservatiories, a playground, and a climatological station.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/New Zealand/HagleyPark.jpg" alt = "Hagley Park">
+        <h4>Hagley Park</h4>
+		<p>This is the largest urban park in New Zealand. According to the government's decree at the time 
+			of its creation, this park is "reserved forever as a public park, and shall be open for the recreation 
+			and enjoyment of the public."
+		</p>
+	</div>
+	<div class = "1column">
+		<img src = "Images/New Zealand/WillowbankWildlifeReserve.jpg" alt = "Willowbank Wildlife Reserve">
+        <h4>Willowbank Wildlife Reserve</h4>
+		<p>This nature reserve has public displays of various native animal species such as the tuatara and 
+			the kiwi.
+		</p>
 	</div>
 </div>
 </div>
