added images and text to peru, needs google maps

--- a/PeruGuide.html
+++ b/PeruGuide.html
@@ -188,62 +188,69 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about Peru</h1>
+	<p>Peru is a country located in South America, with a population of approximately 33 million people. 
+		The country is home to diverse landscapes, including the Andes Mountains, the Amazon Rainforest, 
+		and the Pacific coast. The official languages are Spanish, Quechua, and Aymara. Peru is known for 
+		its rich history, with many ancient civilizations leaving behind impressive archaeological sites, 
+		such as Machu Picchu and Chan Chan. The country's cuisine is also renowned, with dishes such as 
+		ceviche and lmo saltado gaining popularity worldwide. The economy is primarily based on 
+		agriculture, mining, and tourism. Peru is one of the world's largest producers of gold, silver, 
+		and copper.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Lima</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $20 / day per person</li>
+		<li>Mid-Range: $60 /  day per person</li>
+		<li>High-Range: $204 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Cusco</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $15 / day per person</li>
+		<li>Mid-Range: $40 /  day per person</li>
+		<li>High-Range: $105 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in Peru</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Lima</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/Peru/LarcoMuseum.jpg" alt = "Larco Museum">
+		<h4>Larco Museum</h4>
+        <p>This museum is dedicated to Peruvian pre-Columbian art and history.</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Peru/MagicWaterCircuit.jpg" alt = "Magic Water Circuit">
+        <h4>Magic Water Circuit</h4>
+		<p>This water and light show commemorates the civillans who fought for Lima 
+			in the War of the Pacific.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Peru/LimaMainSquare.jpeg" alt = "Lima Main Square">
+        <h4>Lima Main Square</h4>
+		<p>This area is considered the birthpalce of the city of Lima.</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Cusco</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Peru/MachuPicchu.jpg" alt = "Machu Picchu">
+        <h4>Machu Picchu</h4>
+		<p>This monument of ancient ruins is the most familiar icon of the Inca Empire.</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Peru/Qorikancha.jpg" alt = "Qorikancha">
+        <h4>Qorikancha</h4>
+		<p>This temple was dedicated to the ancient Incan sun god and was located in the former
+			Inca capital.
+		</p>
 	</div>
 </div>
 </div>
