added text and images to singapore, needs google maps

--- a/SingaporeGuide.html
+++ b/SingaporeGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>SingaporeGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -188,62 +188,69 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about Singapore</h1>
+	<p>Singapore is a city-state and island country located in Southeast Asia. It has a 
+		population of approximately 5.7 million people and is known for its multiculturaislm, 
+		efficient government, and vibrant economy. The official languages are English, Malay, 
+		Mandarin, and Tamil. Singapore is a global hub for finance, commerce, and transportation, 
+		with a highly developed infrastructure and one of the world's busiest ports. The country 
+		is also known for its cleanliness, green spaces, and low crime rate. Singapore is a 
+		popular tourist destination, with attractions such as Marina Bay Sands, Gardens by the 
+		Bay, and Sentosa Island.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
-	</ul>
-	<p>City</p>
-	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $47 / day per person</li>
+		<li>Mid-Range: $124 /  day per person</li>
+		<li>High-Range: $341 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in Singapore</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Jurong East</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/Singapore/JurongParkGarden.jpeg" alt = "Jurong Park Garden">
+		<h4>Jurong Park Garden</h4>
+        <p>At this park, you can exlpore the biodiversity and fine in the restaurants nearby.</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Singapore/ScienceCentreSingapore.jpg" alt = "Science Centre Singapore">
+        <h4>Science Centre Singapore</h4>
+		<p>This institution specializes in the promotion of science and technological education 
+			for the public.
+		</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Yishun</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Singapore/HolyTreeSriBalasubramaniarTemple.jpg" alt = "Holy Tree Sri Balasubramaniar Temple">
+        <h4>Holy Tree Sri Balasubramaniar Temple</h4>
+		<p>This temple was founded in 1962 and became a religious and social space for 
+			the Hindu community.
+		</p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in Bukit Batok</h3>
+<br>
+<div class = "row">
+	<div class = "1column">
+		<img src = "Images/Singapore/BukitTimahNatureReserve.jpg" alt = "Bukit Timah Nature Reserve">
+        <h4>Bukit Timah Nature Reserve</h4>
+		<p>This reserve is the country's highest natural peak at 541 feet high.</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Singapore/LittleGuilin.jpg" alt = "Little Guilin">
+        <h4>Little Guilin</h4>
+		<p>This park was created from the disused granite quarry and resembles the granite 
+			rock formations in Guilin, China, hence the name.
+		</p>
 	</div>
 </div>
 </div>
