--- a/SouthAfricaGuide.html
+++ b/SouthAfricaGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>SouthAfricaGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -188,62 +188,83 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about South Africa</h1>
+	<p>South Africa is a country located at the southern tip of the African continent, with a population 
+		of approximately 60 million people. It is known for its diverse landscapes, with a range from 
+		beaches to mountains, and its cultural heritage, which includes 11 official languages and a 
+		history of colonialism and apartheid. The country's economy is primarily based on mining, 
+		agriculture, and tourism. South Africa is one of the world's largest producers of gold, 
+		diamonds, and platinum. The country is also home to numerous national parks, and wildlife reserves, 
+		including the Kruger National Park and the Cape of Good Hope Nature Reserve.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Cape Town</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $43 / day per person</li>
+		<li>Mid-Range: $78 /  day per person</li>
+		<li>High-Range: $173 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Johannesburg</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $37 / day per person</li>
+		<li>Mid-Range: $77 /  day per person</li>
+		<li>High-Range: $162 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in South Africa</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Cape Town</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/South Africa/BouldersBeach.jpg" alt = "Boulders Beach">
+		<h4>Boulders Beach</h4>
+        <p>This beach is located between granite boulders and is known for its colony 
+			of African penguins.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/South Africa/KirstenboschGarden.jpg" alt = "Kirstenbosch National Botanical Garden">
+        <h4>Kirstenbosch National Botanical Garden</h4>
+		<p>This garden is located at the eastern foot of Table Mountain and has a large 
+			cultivation of indigenous plants and a large conservatory that exhibits plants 
+			from the different regions of Cape Town.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/South Africa/CapeOfGoodHope.jpg" alt = "Cape of Good Hope">
+        <h4>Cape of Good Hope</h4>
+		<p>This headland off the coast of the Cape Peninsula serves as a significant 
+			port to sailors traveling from Europe to Asia before the Suuez Canal opened in 1869.
+		</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Johannesburg</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/South Africa/ConstitutionHill.jpg" alt = "Constitution Hill">
+        <h4>Constitution Hill</h4>
+		<p>This precinct is the seat of the Constitutional Court of South Africa and was formally 
+			the location of a prison. The inside contains a museum that includes the Mandela cell 
+			where Nelson Mandela resided while he was held in prison.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/South Africa/LionAndSafariPark.jpg" alt = "Lion and Safari Park">
+        <h4>Lion and Safari Park</h4>
+		<p>This park is a conservation enclosure for lions, hyenas, wild dogs, various 
+			antelope, and cheetahs.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/South Africa/WalterSisuluNationalBotanicalGardens.jpg" alt = "Walter Sisulu National Botanical Gardens">
+        <h4>Walter Sisulu National Botanical Gardens</h4>
+		<p>This garden is home to 240 species of birds as well as a pair of Verreaux's eagles with their nest 
+			on the cliff near the waterfall.
+		</p>
 	</div>
 </div>
 </div>
