added text and images for spain, needs google maps

--- a/SpainGuide.html
+++ b/SpainGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>SpainGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -188,62 +188,64 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about Spain</h1>
+	<p>Spain is a country located in Southwestern Europe, with a population of approximately 47 million people. 
+		It is known for its rich history, diverse culture, and stunning architecture. The official language is 
+		Spanish, and the country also has several regional languages such a Catalan, Basque, and Galician. Spain 
+		is a popular tourist destination, with attractions such as the beaches of the Costa del Sol, 
+		the architecture of Barcelona, and the historic cities of Madrid and Seville. The country's economy 
+		is based on industries such as tourism, agriculture, and manufacturing. Spain is also a major producer of 
+		wine and olive oil. The country has a parliamentary system of government, with the monarch serving as a 
+		ceremonial head of state.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Madrid</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $47 / day per person</li>
+		<li>Mid-Range: $118 /  day per person</li>
+		<li>High-Range: $308 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Barcelona</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $65 / day per person</li>
+		<li>Mid-Range: $168 /  day per person</li>
+		<li>High-Range: $366 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in Spain</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Madrid</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/Spain/ArteReinaSofia.jpg" alt = "Museo Nacional Centro de Arte Reina Sofia">
+		<h4>Museo Nacional Centro de Arte Reina Sofia</h4>
+        <p>This museum is Spain's national museum that contains 20th century Spanish artwork 
+			from artists such as Pablo Picasso and Salvador Dali.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Spain/SanMiguelMarket.jpg" alt = "San Miguel Market">
+        <h4>San Miguel Market</h4>
+		<p>This local food market contains dishes from all parts of the country that can be sampled.</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Barcelona</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Spain/MercadoDeLaBoqueria.jpg" alt = "Mercado de La Boqueria">
+        <h4>Mercado de La Boqueria</h4>
+		<p>This public food market offers local and international food products and is known 
+			as the heart of Barcelona.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Spain/ParkGuell.jpg" alt = "Park Guell">
+        <h4>Park Guell</h4>
+		<p>This park contains gardens and architectural structures by Catalan architect Antoni Gaudi.</p>
 	</div>
 </div>
 </div>
