added images and text to sri lanka, needs google maps

--- a/SriLankaGuide.html
+++ b/SriLankaGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>SriLankaGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -188,62 +188,74 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about Sri Lanka</h1>
+	<p>Sri Lanka, officially known as the Democratic Socialist Republic of Sri Lanka, is an island 
+		country located in South Asia. It has a population of approximately 22 million people 
+		and is known for its natural beaty, rich culture, and history. The official languages are 
+		Sinhala and Tamil, although English is also widely spoken. Sri Lanka is famous for its tea 
+		plantations, which produce some of the world's finest tea. The country's economy is primarily 
+		based on agriculture, tourism, and manufacturing. Sri Lanka has a diverse range of wildlife, 
+		including elephants, leopards, and various species of birds. The country also has a rich 
+		cultural heritage, with many ancient temples and monuments, including the ancient city of 
+		Anuradhapura and the Sigiriya Rock Fortress.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Kandy</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $18 / day per person</li>
+		<li>Mid-Range: $28 /  day per person</li>
+		<li>High-Range: $87 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Galle</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $22 / day per person</li>
+		<li>Mid-Range: $29 /  day per person</li>
+		<li>High-Range: $98 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in Sri Lanka</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Kandy</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/Sri Lanka/RoyalBotanicalGardenPeradeniya.jpg" alt = "Royal Botanical Garden Peradeniya">
+		<h4>Royal Botanical Garden Peradeniya</h4>
+        <p>This garden contains 4,000 species of plants and is most known for its 
+			collection of orchids.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sri Lanka/KandyLake.jpg" alt = "Kandy Lake">
+        <h4>Kandy Lake</h4>
+		<p>This lake is located by the Temple of the Tooth and was known to the native 
+			people as "Sea of Milk"
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sri Lanka/WorldBuddhistMuseum.jpg" alt = "World Buddhist Museum">
+        <h4>World Buddhist Museum</h4>
+		<p>This museum is the world's first international Buddhist museum and is 
+			dedicated to the expansion of Buddhism around the world.
+		</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Galle</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sri Lanka/MaritimeMuseum.jpg" alt = "Maritime Museum">
+        <h4>Maritime Museum</h4>
+		<p>This museum is dedicated to the biological and anthropological aspects of the 
+			Southern coastal area.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sri Lanka/GalleLighthouse.jpg" alt = "Galle Lighthouse">
+        <h4>Galle Lighthouse</h4>
+		<p>This lighthouse is Sri Lanka's oldest light station.</p>
 	</div>
 </div>
 </div>
