added images and text to sweden, needs google maps

--- a/SwedenGuide.html
+++ b/SwedenGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>SwedenGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -188,62 +188,75 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about Sweden</h1>
+	<p>Sweden is a country located in northern Europe, with a population of approximately 
+		10.3 million people. It is known for its stunning beauty, high standard of living, 
+		and progressive social policies. The official language is Swedish, and the country 
+		has a rich cultural heritage, including traditional celebrations such as Midsummer 
+		and Lucia. Sweden's economy is primarily based on industries such as manufacturing, 
+		services, and technology. The country is home to many international companies, including 
+		Ikea, Volvo, and Ericsson. Sweden is also known for its welfare programs to all 
+		citizens. The country has a constitutional monarchy with a parliamentary system of 
+		government, and is a member of the European Union. Sweden is also known for its commitment 
+		to environmental sustainability, and is a leader in renewable energy and climate action.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Stockholm</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $56 / day per person</li>
+		<li>Mid-Range: $141 /  day per person</li>
+		<li>High-Range: $322 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Gothenburg</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $38 / day per person</li>
+		<li>Mid-Range: $81 /  day per person</li>
+		<li>High-Range: $143 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in Sweden</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Stockholm</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/Sweden/Skansen.jpg" alt = "Skansen">
+		<h4>Skansen</h4>
+        <p>This open-air museum and zoo contains a collection of historic structures 
+			from Central and Eastern Europe.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sweden/RoyalPalace.jpg" alt = "The Royal Palace">
+        <h4>The Royal Palace</h4>
+		<p>Take a tour of the official residence of the Swedish royal family.</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sweden/VasaMuseum.jpg" alt = "Vasa Museum">
+        <h4>Vasa Museum</h4>
+		<p>This museum is dedicated to the warship Vasa that is still fully intact after 
+			having sank in 1628.
+		</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Gothenburg</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sweden/Universeum.jpg" alt = "Universeum">
+        <h4>Universeum</h4>
+		<p>This science center and museum contains exhibits on space exploration, 
+			humans, and technology, and animals such as reptiles and insects.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Sweden/VolvoMuseum.jpg" alt = "VOLVO Museum">
+        <h4>VOLVO Museum</h4>
+		<p>This museum is dedicated to Sweden's leading vehicular manufacturer Volvo 
+			and its development.
+		</p>
 	</div>
 </div>
 </div>
