added images and text to thailand, needs google maps

--- a/ThailandGuide.html
+++ b/ThailandGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>ThailandGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -188,62 +188,58 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
-	<p></p>
+	<h1>Some Facts about Thailand</h1>
+	<p>Thailand, official known as the Kingdom of Thailand, is a country located in Southeast Asia. 
+		It has a population of approximately 69 million people and is known for its rich culture, 
+		stunning beaches, delicious cuisine. The official language is Thai, and the country is known 
+		for its Buddhist temples and monasteries, including the famous Temple of the Emerald Buddha 
+		in Bangkok. Thailand's economy is primarily based on industries such as tourism, agriculture, 
+		and manufacturing. The country is a major producer of rice, tropical fruits, and seafood. 
+		Thailand is also known for its vibrant nightlife and entertainment industry, with cities like 
+		Bangkok and Pattaya offering a range of attractions for tourists.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Bangkok</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
-	</ul>
-	<p>City</p>
-	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $23 / day per person</li>
+		<li>Mid-Range: $62 /  day per person</li>
+		<li>High-Range: $174 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in Thailand</h1>
 <br>
-<h3>Places to Visit in </h3>
-<br>
-<div class = "row">
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-</div>
-<br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Bangkok</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Thailand/GrandPalace.jpg" alt = "The Grand Palace">
+		<h4>The Grand Palace</h4>
+        <p>This palace was built in 1782 and features multiple buildings like the 
+			Temple of the Emerald Buddha and several courtyards.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Thailand/ChatuchakMarket.jpg" alt = "The Chatuchak Market">
+        <h4>The Chatuchak Market</h4>
+		<p>This market has more than 15,000 stalls that sell food and drinks, 
+			antiques, cosmetics, and accessories.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Thailand/BangkokNationalMuseum.jpg" alt = "The Bangkok National Museum">
+        <h4>The Bangkok Nationak Museum</h4>
+		<p>The museum is the largest museum in Southeast Asia and contains a vast collection of 
+			artifacts and artwork showcasing the country's rich history and culture, including 
+			prehistoric artifacts, royal regalia, and traditional costumes.
+		</p>
+	</div>
+	<div class = "1column">
+		<img src = "Images/Thailand/DusitZoo.jpg" alt = "Dusit Zoo">
+        <h4>Dusit Zoo</h4>
+		<p>This zoo was built in 1938 by King Chulalongkorn and features over 1,600 species 
+			of domestic and international animals.
+		</p>
 	</div>
 </div>
 </div>
